@@ -6,6 +6,7 @@ Version 6.0.0
 - Added "ASM_CONST" keyword to Spin
 - Added optimization for x==x in integer code
 - Added check for re-defining member variables in classes
+- Added _SameTypes() function to BASIC to check data types
 - Changed "ASM CONST" to "CONST ASM" in BASIC
 - Fixed multiple assignments in Spin (a:=b:=c) to have the same semantics as Spin
 - Fixed template functions so BASIC "string" type is preserved
